--- a/client/src/styles/global.scss
+++ b/client/src/styles/global.scss
@@ -1,6 +1,10 @@
+@import './fonts.scss';
+@import './configs/root-variables.scss';
+
 html, body {
     padding: 0;
     margin: 0;
-    background-color: rgb(20, 20, 20);
-    color: #fff;
+    background-color: var(--bg-neutral-0);
+    color: var(--color-primary-0);
+    font-family: 'Kumbh Sans';
 }
