--- a/client/src/styles/topBar.scss
+++ b/client/src/styles/topBar.scss
@@ -1,11 +1,11 @@
 .top-bar {
     display: flex;
-    color: #98989A;
+    color: var(--color-secondary-1);
     justify-content: center;
     align-items: center;
     cursor: pointer;
     .top-bar__arrow {
-        color: #FFD11A;
+        color: var(--bg-focus-1);
         margin-left: 10px;
         height: 18px;
     }
