chore: adding main banner

--- a/client/src/styles/configs/root-variables.scss
+++ b/client/src/styles/configs/root-variables.scss
@@ -8,4 +8,6 @@
     --bg-focus-0: rgb(25, 25, 25);
     --bg-focus-1: #FFD11A;
     --bg-focus-2: rgb(51, 51, 51);
+
+    --border-primary-color-0: rgb(26, 26, 26);
 }
