--- a/client/src/styles/navBar.scss
+++ b/client/src/styles/navBar.scss
@@ -1,6 +1,8 @@
 .nav-bar {
     width: 100%;
     padding: 24px 0;
+    border: 1px var(--border-primary-color-1);
+    border-style: solid none;
     background-color: var(--bg-focus-0);
     .nav-bar__items {
         display: flex;
