--- a/client/src/styles/banners.scss
+++ b/client/src/styles/banners.scss
@@ -6,7 +6,7 @@
   border-bottom: 3px solid var(--border-primary-color-0);
   margin-bottom: 20px;
   .main-banner__inner-container {
-    padding-left: 300px;
+    padding-left: 8.44%;
     padding-top: 40px;
     max-width: 680px;
     span {
