--- a/client/src/styles/postCard.scss
+++ b/client/src/styles/postCard.scss
@@ -1,5 +1,6 @@
 .post-card__container {
   max-width: 680px;
+  margin: 24px 0;
   .post-card__author-details {
     display: flex;
     align-items: center;
