--- a/client/src/styles/topBar.scss
+++ b/client/src/styles/topBar.scss
@@ -3,10 +3,17 @@
     color: var(--color-secondary-1);
     justify-content: center;
     align-items: center;
+    font-size: 13px;
     cursor: pointer;
     .top-bar__arrow {
         color: var(--bg-focus-1);
         margin-left: 10px;
         height: 18px;
+    }
+}
+
+@media (min-width: 64rem) {
+    .top-bar {
+        font-size: 16px;
     }
 }
