--- a/client/src/styles/postCard.scss
+++ b/client/src/styles/postCard.scss
@@ -1,6 +1,10 @@
 .post-card__container {
   max-width: 680px;
   margin: 24px 0;
+  a {
+    color: inherit;
+    text-decoration: none;
+  }
   .post-card__author-details {
     display: flex;
     align-items: center;
@@ -23,6 +27,9 @@
     font-size: 16px;
     color: var(--color-secondary-0);
     margin: 0 0 8px 0;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
   }
   .post-card__additional-properties {
     font-size: 13px;
