--- a/client/src/styles/global.scss
+++ b/client/src/styles/global.scss
@@ -1,10 +1,20 @@
-@import './fonts.scss';
-@import './configs/root-variables.scss';
+@import "./fonts.scss";
+@import "./configs/root-variables.scss";
 
-html, body {
-    padding: 0;
-    margin: 0;
-    background-color: var(--bg-neutral-0);
-    color: var(--color-primary-0);
-    font-family: 'Kumbh Sans';
+html,
+body {
+  padding: 0;
+  margin: 0;
+  background-color: var(--bg-neutral-0);
+  color: var(--color-primary-0);
+  font-family: "Kumbh Sans";
+}
+
+.page-generic__container {
+  display: flex;
+  max-width: 1336px;
+  margin: 0 auto;
+  .render-posts__container {
+    width: 100%;
+  }
 }
